button overlapping issue fixed.

--- a/components/ambassadors/Ambassadors.module.scss
+++ b/components/ambassadors/Ambassadors.module.scss
@@ -42,7 +42,10 @@
     color: white;
     font-size: 19px;
     font-weight: 900;
-    margin-bottom: 1.5rem;
+  }
+
+  ul {
+    margin-top: 1.5rem;
   }
 
   ul li {
